--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,13 +3,23 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-    </head>
-    <body>
-        @content
-    </body>
+<head>
+  <title>@title</title>
+  <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+</head>
+<body>
+
+<script type="text/x-handlebars" data-template-name="whai">
+  {{outlet}}
+</script>
+
+<script type="text/x-handlebars" data-template-name="questions">
+  {{#each question in controller}}
+    <div>{{question.id}} {{question.text}}</div>
+  {{/each}}
+</script>
+
+<script src="@routes.Assets.at("javascripts/bower_components/headjs-notify/src/load.js")" type="text/javascript"></script>
+<script src="@routes.Assets.at("javascripts/boot.js")" type = "text/javascript"></script>
+</body>
 </html>
