--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,9 +14,34 @@
 </script>
 
 <script type="text/x-handlebars" data-template-name="questions">
+  <pre>
+   --      -- --    --     --    --
+   ||      || ||    ||     ||    ||
+   ||  ++  || || ++ ||   ||  ||  ||
+     ||  ||   ||    || ||  ++ || ||
+     --  --   --    -- --     -- --
+  </pre>
+
   {{#each question in controller}}
-    <div>{{question.id}} {{question.text}}</div>
+    <div class="row">
+      <div class="col-xs-1">
+        <button type="button" class="btn btn-success btn-sm">Yes</button>
+      </div>
+      <div class="col-xs-11">{{question.text}}</div>
+    </div>
   {{/each}}
+
+<div class="row">
+  <div class="progress">
+    <div class="progress-bar progress-bar-success" style="width: 40%">
+      <span class="sr-only">40% Yes</span>
+    </div>
+    <div class="progress-bar progress-bar-danger" style="width: 60%">
+      <span class="sr-only">60% No</span>
+    </div>
+  </div>
+  </div>
+
 </script>
 
 <script src="@routes.Assets.at("javascripts/bower_components/headjs-notify/src/load.js")" type="text/javascript"></script>
