--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,33 +14,39 @@
 </script>
 
 <script type="text/x-handlebars" data-template-name="questions">
-  <pre>
-   --      -- --    --     --    --
-   ||      || ||    ||     ||    ||
-   ||  ++  || || ++ ||   ||  ||  ||
-     ||  ||   ||    || ||  ++ || ||
-     --  --   --    -- --     -- --
-  </pre>
+<div class="container">
 
+  <div class="row">
+    <pre>
+      --      -- --    --     --    --
+      ||      || ||    ||     ||    ||
+      ||  ++  || || ++ ||   ||  ||  ||
+        ||  ||   ||    || ||  ++ || ||
+        --  --   --    -- --     -- --
+    </pre>
+  </div>
+
+  <div class="row">
   {{#each question in controller}}
     <div class="row">
       <div class="col-xs-1">
-        <button type="button" class="btn btn-success btn-sm">Yes</button>
+        <button type="button" class="btn btn-success btn-sm">{{question.answer}}</button>
       </div>
       <div class="col-xs-11">{{question.text}}</div>
     </div>
   {{/each}}
-
-  <div class="row">
-    <div class="progress">
-    <div class="progress-bar progress-bar-success" style="width: 30%">
-      <span class="sr-only">40% Yes</span>
-    </div>
-    <div class="progress-bar progress-bar-danger" style="width: 60%">
-      <span class="sr-only">60% No</span>
-    </div>
-    </div>
   </div>
+
+    <div class="row progress">
+      <div class="progress-bar progress-bar-success" style="width: 30%">
+        <span class="sr-only">40% Yes</span>
+      </div>
+      <div class="progress-bar progress-bar-danger" style="width: 60%">
+        <span class="sr-only">60% No</span>
+      </div>
+    </div>
+
+</div>
 
 </script>
 
