--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -37,14 +37,18 @@
   {{/each}}
   </div>
 
-    <div class="row progress">
-      <div class="progress-bar progress-bar-success" style="width: 30%">
-        <span class="sr-only">40% Yes</span>
-      </div>
-      <div class="progress-bar progress-bar-danger" style="width: 60%">
-        <span class="sr-only">60% No</span>
+  <div class="row">
+    <div class="col-xs-offset-1 col-xs-11">
+      <div class="progress">
+        <div class="progress-bar progress-bar-success" style="width: 30%">
+          <span class="sr-only">40% Yes</span>
+        </div>
+        <div class="progress-bar progress-bar-danger" style="width: 60%">
+          <span class="sr-only">60% No</span>
+        </div>
       </div>
     </div>
+  </div>
 
 </div>
 
