--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -30,7 +30,7 @@
   {{#each question in controller}}
     <div class="row">
       <div class="col-xs-1">
-        <button type="button" class="btn btn-success btn-sm">{{question.answer}}</button>
+        <button type="button" class="btn btn-sm" {{bind-attr class="question.answer:btn-success:btn-danger"}} {{action 'toggle' question}}>{{question.answer}}</button>
       </div>
       <div class="col-xs-11">{{question.text}}</div>
     </div>
@@ -40,11 +40,11 @@
   <div class="row">
     <div class="col-xs-offset-1 col-xs-11">
       <div class="progress">
-        <div class="progress-bar progress-bar-success" style="width: 30%">
-          <span class="sr-only">40% Yes</span>
+        <div class="progress-bar progress-bar-success" {{bind-attr style=yes}}>
+          <span class="sr-only">{{yes}}% Yes</span>
         </div>
-        <div class="progress-bar progress-bar-danger" style="width: 60%">
-          <span class="sr-only">60% No</span>
+        <div class="progress-bar progress-bar-danger" {{bind-attr style=no}}>
+          <span class="sr-only">{{no}}% No</span>
         </div>
       </div>
     </div>
