remove java and other unnecessary resources

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,10 +1,8 @@
-@(title: String)(content: Html)
-
 <!DOCTYPE html>
 
 <html>
 <head>
-  <title>@title</title>
+  <title"What hero am i?"</title>
   <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 </head>
 <body>
