fixed header was added

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,3 +1,17 @@
 .row {
-    margin-top: 5px;
+  margin-top: 5px;
+}
+
+.header {
+  position: fixed;
+  z-index: 10;
+  top: 0px;
+  padding-top: 10px;
+  height: 40px;
+  width: 100%;
+  background: #ffffff;
+}
+
+.content {
+  margin-top: 50px;
 }
